<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMICalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calculate">Calculate</string>
    <string name="weightLabel">Weight</string>
    <string name="heightLabel">Height</string>
    <string name="calculateButton">Calculate</string>
    <string name="resultText"></string>
    <string name="resetButton">Reset</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>

</resources>
